--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.4",
     "react-toggle-slider": "^0.4.0",
     "web-vitals": "^2.1.4"
   },
