--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@microsoft/microsoft-graph-types": "^2.25.0"
+    "@microsoft/microsoft-graph-types": "^2.25.0",
+    "@types/react-slider": "^1.3.1"
   }
 }
