--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.4.0",
+    "react-microsoft-login": "^1.15.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.4",
